# token-2022-staking

./: .env-example  Anchor.toml  package-lock.json  package.json
app/: config-overrides.js  package-lock.json  package.json
app/public/: index.html
app/src/: App.js  index.css  index.js
app/src/components/: AdminDashboard.js  AdvancedRewardsView.js  ClaimRewards.js  Header.js  Layout.js  Stake.js  Unstake.js  WalletConnection.js
app/src/idl/: idl.json
app/src/utils/: config.js  errors.js
programs/token-2022-staking/: Cargo.toml
programs/token-2022-staking/src/: lib.rs
tests/: token-2022-staking.ts
