[package]
name = "token-2022-staking"
version = "0.1.0"
description = "This is staking program with token 2022"
edition = "2021"
authors = ["SAAD QAYYUM"]

[lib]
crate-type = ["cdylib", "lib"]
name = "token_2022_staking"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"]}
anchor-spl = "0.30.1"
spl-token-2022 = { version = "3.0.2" }
spl-tlv-account-resolution = "0.6.3"
spl-type-length-value = "0.4.3"
spl-pod = "0.2.2"

